Fix height offer title overlapping

--- a/src/story/story-lists/StoryLists.scss
+++ b/src/story/story-lists/StoryLists.scss
@@ -14,6 +14,9 @@
 .mediaWrapper {
   width: 100%;
   height: 70%;
+  @media (max-width: 425px) {
+    height: 60%;
+  }
   @media (max-width: 320px) {
     height: 60%;
   }
