--- a/src/story/story-title/StoryTitle.scss
+++ b/src/story/story-title/StoryTitle.scss
@@ -6,6 +6,9 @@
   display: flex;
   justify-content: flex-end;
   flex-direction: column;
+  @media (max-width: 425px) {
+    height: 40%;
+  }
   @media (max-width: 320px) {
     height: 40%;
   }
